Fixed Some Responsivity Bugs on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -583,7 +583,7 @@ a:visited {
     width: 100%;
   }
   .hero__container .hero__right {
-    width: 100vw;
+    width: 100%;
     height: 30vh;
     margin-top: 4%;
   }
@@ -750,7 +750,7 @@ a:visited {
   }
   .divider {
     height: 100%;
-    padding: 5% 0;
+    padding: 10% 0;
   }
   .divider__wrapper {
     flex-direction: column;
@@ -759,6 +759,10 @@ a:visited {
   }
   .divider__wrapper .service-container {
     justify-content: center;
+    flex-direction: column;
+  }
+  .divider__wrapper .service-container--2 {
+    padding-left: 0;
   }
   .hero__container .hero__right {
     height: 13vh;
