--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -177,7 +177,7 @@
     width: 100%;
 
     .hero__right {
-      width: 100vw;
+      width: 100%;
       height: 30vh;
       margin-top: 4%;
 
@@ -403,7 +403,7 @@
 
   .divider{
     height: 100%;
-    padding: 5% 0;
+    padding: 10% 0;
     &__wrapper{
         flex-direction: column;
         align-items: center;
@@ -411,6 +411,11 @@
 
         .service-container{
           justify-content: center;
+          flex-direction: column;
+        }
+
+        .service-container--2{
+          padding-left: 0;
         }
     }
   }
